Causeview Package Complete/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Advocate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if constituent is involved in advocacy</description>
        <inlineHelpText>Checked if constituent is involved in advocacy</inlineHelpText>
        <label>Advocate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(MONTH(TODAY())&gt;MONTH(Birthdate),
YEAR(TODAY())-YEAR(Birthdate),
IF(AND(MONTH(TODAY())=MONTH(Birthdate),
DAY(TODAY())&gt;=DAY(Birthdate)),
YEAR(TODAY())-YEAR(Birthdate),
(YEAR(TODAY())-YEAR(Birthdate))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alumni__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes constituent is an alumni</description>
        <label>Alumni</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Annual Report subscriber</description>
        <label>Annual Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if individual would like to remain anonymous.</description>
        <inlineHelpText>Check if individual would like to remain anonymous.</inlineHelpText>
        <label>Anonymous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appeal_Recovery_Gift_Date__c</fullName>
        <label>Appeal Recovery Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apt_Unit__c</fullName>
        <label>Apt Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_Gift__c</fullName>
        <description>Average gift amount excluding largest and smallest gift</description>
        <inlineHelpText>Average gift amount excluding largest and smallest gift</inlineHelpText>
        <label>Average Gift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Board_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes individual is a board member</description>
        <label>Board Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consecutive_Years_of_Giving__c</fullName>
        <label>Consecutive Years of Giving</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consecutive_Years_of_Transactions__c</fullName>
        <label>Consecutive Years of Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Constituent_Codes__c</fullName>
        <label>Constituent Codes</label>
        <picklist>
            <picklistValues>
                <fullName>Placeholder</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Constituent_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Constituent Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Constituent_ID__c</fullName>
        <description>Defines ID for each constituent.</description>
        <externalId>true</externalId>
        <inlineHelpText>When in the batch entry interface - you can use this field to search on First Name, Last Name or Postal Code</inlineHelpText>
        <label>Constituent ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Employed__c</fullName>
        <label>Currently Employed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_complete_for_Gift_Aid__c</fullName>
        <formula>If( 
Or( 
Isblank( FirstName ), 
Isblank( LastName ), 
Isblank( MailingStreet ), 
Isblank( MailingPostalCode ) 
),FALSE,TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data complete for Gift Aid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Gift__c</fullName>
        <label>Date of First Gift</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Transaction__c</fullName>
        <label>Date of First Transaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Event_Attended__c</fullName>
        <inlineHelpText>The Date of the last event this individual has attended.</inlineHelpText>
        <label>Date of Last Event Attended</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Exit__c</fullName>
        <description>The date the volunteer left their last volunteer position.</description>
        <label>Date of Last Exit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Gift__c</fullName>
        <label>Date of Last Gift</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Transaction__c</fullName>
        <label>Date of Last Transaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Gift__c</fullName>
        <description>Number of days since constituent&apos;s last gift</description>
        <formula>TODAY() - Date_of_Last_Gift__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days since constituent&apos;s last gift</inlineHelpText>
        <label>Days Since Last Gift</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deceased_Date__c</fullName>
        <description>Deceased date of individual.</description>
        <label>Deceased Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if deceased.</description>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of this contact</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Work__c</fullName>
        <label>Description of Work</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Mail_Recipient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if individual should receive direct mail.</description>
        <inlineHelpText>Check if this individual should receive direct mail.</inlineHelpText>
        <label>Direct Mail Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_Your_Employer_Offer__c</fullName>
        <label>Programs Offered by Employer</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate Gift Matching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Directed Grants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Kind Donation Program</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Donor_Level__c</fullName>
        <description>Donor Level based on years of consecutive giving and total $ giving.</description>
        <label>Donor Level</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect/Supporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occasional Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frequent Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major/Planned Donor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Donor_Recognition_Level__c</fullName>
        <formula>IF( AND( Total_Fiscal_Year_Giving__c  &gt; 999.99, Total_Fiscal_Year_Giving__c &lt;= 2499), &quot;Global Citizen&quot;, 
IF(AND(Total_Fiscal_Year_Giving__c &gt; 2499, Total_Fiscal_Year_Giving__c &lt;= 4999), &quot;Global Advocate&quot;, 
IF(AND(Total_Fiscal_Year_Giving__c &gt; 4999, Total_Fiscal_Year_Giving__c &lt;= 9999), &quot;Global Ally&quot;, 
IF(AND(Total_Fiscal_Year_Giving__c &gt; 9999, Total_Fiscal_Year_Giving__c &lt;= 24999), &quot;Global Partner&quot;, 
IF(AND(Total_Fiscal_Year_Giving__c &gt; 24999, Total_Fiscal_Year_Giving__c &lt;= 99999), &quot;Global Ambassador&quot;, 
IF(AND(Total_Fiscal_Year_Giving__c &gt; 99999, Total_Fiscal_Year_Giving__c &lt;= 499999), &quot;Global Innovator&quot;, 
IF(AND(Total_Fiscal_Year_Giving__c &gt; 499999, Total_Fiscal_Year_Giving__c &lt;= 999999), &quot;Global Guardian&quot;, 
IF(Total_Fiscal_Year_Giving__c &gt; 999999, &quot;Global Trailblazer&quot;, &quot;N/A&quot;))))))))</formula>
        <label>Donor Recognition Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donor_Status__c</fullName>
        <description>Donor status for moves management</description>
        <inlineHelpText>Donor status for moves management</inlineHelpText>
        <label>Donor Status</label>
        <picklist>
            <picklistValues>
                <fullName>Suspect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stewardship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Donor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if constituent has given a gift in past two fiscal years</description>
        <inlineHelpText>Checked if constituent has given a gift in past two fiscal years</inlineHelpText>
        <label>Donor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education_Level__c</fullName>
        <description>Highest level of education volunteer has completed.</description>
        <inlineHelpText>The highest level of education achieved</inlineHelpText>
        <label>Education Level</label>
        <picklist>
            <picklistValues>
                <fullName>High School/GED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade/Vocational School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelors Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masters Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctoral Degree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Educational_Program_Name__c</fullName>
        <description>Name of educational program or major.</description>
        <label>Educational Program Name</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone__c</fullName>
        <description>Phone number for the emergency contact.</description>
        <label>Emergency Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Relationship__c</fullName>
        <description>The relationship between the individual and emergency contact.</description>
        <label>Relationship</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact__c</fullName>
        <description>Emergency contact&apos;s name.</description>
        <label>Emergency Contact</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Flagged if the individual has been to an Event.</inlineHelpText>
        <label>Event Attendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Guest_Attendee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Individual created as a guest attendee of the primary registrant</description>
        <inlineHelpText>Individual created as a guest attendee of the primary registrant</inlineHelpText>
        <label>Event Guest Attendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Solicitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the external solicitation relationship</description>
        <inlineHelpText>Defines the external solicitation relationship</inlineHelpText>
        <label>External Solicitor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assigned Prospects</relationshipLabel>
        <relationshipName>ExternalSolicitor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Time_Donor__c</fullName>
        <formula>IF(Date_of_First_Gift__c = Date_of_Last_Gift__c, &apos;True&apos;, &apos;False&apos;)</formula>
        <label>First Time Donor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Gender of individual.</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Giving_of_Income__c</fullName>
        <formula>IF( Total_Fiscal_Year_Giving__c = 0, 0, ( Total_Fiscal_Year_Giving__c  / Income__c ))</formula>
        <label>Giving % of Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Household_Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if contact is the primary household member.</description>
        <inlineHelpText>Household primary contact.  This individual automatically assumes the Household salutation, addressee, mailing address and phone number.</inlineHelpText>
        <label>Head of Household</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Household_Role__c</fullName>
        <description>Role in household</description>
        <label>Household Role</label>
        <picklist>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandmother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandfather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aunt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship to a household.</description>
        <label>Household</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Household</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Members</relationshipLabel>
        <relationshipName>HouseholdContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>How_Did_You_Hear_About_Us__c</fullName>
        <description>Applicant&apos;s method of discovering the organization and volunteer opportunity.</description>
        <label>How Did You Hear About Us</label>
        <picklist>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Church/Synagogue/Mosque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Place of Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School/College/University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of Mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Income__c</fullName>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Integration_ID__c</fullName>
        <description>External integration ID</description>
        <externalId>true</externalId>
        <label>Integration ID</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Internal_Solicitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines employee that owns solicitation relationship</description>
        <inlineHelpText>Defines employee that owns solicitation relationship</inlineHelpText>
        <label>Internal Solicitor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>InternalSolicitor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Largest_Gift__c</fullName>
        <description>Amount of largest gift to date</description>
        <inlineHelpText>Amount of largest gift to date</inlineHelpText>
        <label>Largest Gift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Gift_Amount__c</fullName>
        <label>Last Gift Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Amount__c</fullName>
        <label>Last Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Role_Exited__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The last volunteer role the individual left.</description>
        <label>Last Role Exited</label>
        <referenceTo>Volunteer_Role__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Volunteer_Profile_Updated__c</fullName>
        <label>Last Volunteer Profile Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lifetime_Appeal_Amount__c</fullName>
        <label>Lifetime Appeal Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Major_Gift_Donor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Major Gift Donor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if constituent is a current member</description>
        <inlineHelpText>Checked if constituent is a current member</inlineHelpText>
        <label>Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Miles_Willing_to_Travel_One_Way__c</fullName>
        <description>Maximum distance the volunteer is willing to travel in one direction.</description>
        <label>Miles Willing to Travel (One Way)</label>
        <picklist>
            <picklistValues>
                <fullName>10 miles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 miles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 miles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wherever there is a need</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_of_Educational_Institution__c</fullName>
        <description>Name of volunteer&apos;s educational institute.</description>
        <inlineHelpText>The name of the educational institution that the volunteer attended.</inlineHelpText>
        <label>Name of Educational Institution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_Last_Event_Attended__c</fullName>
        <inlineHelpText>The Name of the last event this individual has attended.</inlineHelpText>
        <label>Name of Last Event Attended</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newsletter_Subscriber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place_of_Employment__c</fullName>
        <description>Place of employment.</description>
        <label>Place of Employment</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortalUser__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Determines if the contact as access to Causeview Portal</inlineHelpText>
        <label>Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Locales__c</fullName>
        <description>Locations the volunteer prefers to volunteer in.</description>
        <label>Preferred Locale(s)</label>
        <picklist>
            <picklistValues>
                <fullName>To be defined by organization</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Program_1__c</fullName>
        <description>Captures the volunteers first preference for program placement.</description>
        <label>Preferred Program 1</label>
        <picklist>
            <picklistValues>
                <fullName>To be defined by organization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Program_2__c</fullName>
        <description>Captures the volunteers second preference for program placement.</description>
        <label>Preferred Program 2</label>
        <picklist>
            <picklistValues>
                <fullName>To be defined by organization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Addressee__c</fullName>
        <description>Individual&apos;s primary addressee - used for sending mail to individual.</description>
        <label>Primary Addressee</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Salutation__c</fullName>
        <description>Individual&apos;s primary salutation - used for communication with individual.</description>
        <label>Primary Salutation</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Skills__c</fullName>
        <description>Professional skills the individual has.</description>
        <label>Professional Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Ability to Lift Heavy Objects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting/Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Educator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising/PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advocacy Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art/Graphic Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career Counselor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Skill: Data Entry and Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Skill: Expert MS Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Skill: Intermediate MS Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Skill: Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culinary Arts/Chef</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dependable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Software Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detail Oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Childhood Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESL English as Second Language Teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interpersonal Skills</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Program_Placed_Into__c</fullName>
        <description>Captures the specific volunteer program the volunteer has been placed in.  Values should align with Preferred Program 1 and 2.</description>
        <inlineHelpText>Captures the specific volunteer program the volunteer has been placed in.</inlineHelpText>
        <label>Program Placed Into</label>
        <picklist>
            <picklistValues>
                <fullName>To be defined by organization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Last_Exit__c</fullName>
        <description>Reason the individual left their last volunteer role.</description>
        <label>Reason for Last Exit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reasons_For_Volunteering__c</fullName>
        <description>Reasons for the individual choosing to volunteer.</description>
        <label>Reasons For Volunteering</label>
        <picklist>
            <picklistValues>
                <fullName>Care about the mission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Develop Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Establish Work Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head Start Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested in Community Involvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meet People and Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Receipt_Preference__c</fullName>
        <description>Defines the donor&apos;s receipt preference.</description>
        <label>Receipt Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Single Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Receipt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recognition_Name__c</fullName>
        <description>Name to be used for recognition in annual reports, honor rolls, etc.</description>
        <inlineHelpText>Name to be used for recognition in annual reports, honor rolls, etc.</inlineHelpText>
        <label>Recognition Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Placeholder</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Same_as_Household__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mailing address is the same as the household.  This activates a field update to automatically populate the field.</description>
        <inlineHelpText>Check if you would like to use the household mailing address and phone number.

Automatically checked for Head of Household.</inlineHelpText>
        <label>Use Household Address &amp; Phone Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Addressee__c</fullName>
        <description>Individual&apos;s secondary addressee - used for sending mail to individual.</description>
        <label>Secondary Addressee</label>
        <length>254</length>
        <type>Text</type>
    </fields>
</CustomObject>